--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,7 @@
 apache-airflow-providers-amazon[s3fs]==8.19.0
 apache-airflow-providers-common-io==1.3.0
 apache-airflow-providers-slack==8.6.1
+apache-airflow-providers-snowflake==5.3.0
+--extra-index-url https://download.pytorch.org/whl/cpu
+transformers==4.37.1
+torch==2.2.0 
