--- a/.env_example
+++ b/.env_example
@@ -7,3 +7,29 @@ AIRFLOW_CONN_SLACK_CONN='{
     "conn_type": "slack",
     "password": "xoxb-<your_token>",
 }'
+
+AIRFLOW_CONN_SNOWFLAKE_DE_TEAM='{
+    "conn_type":"snowflake",
+    "login":"<your_username>",
+    "password":"<your_password>",
+    "schema":"<your_schema>",
+    "extra":
+        {
+            "account":"<your_account>",
+            "warehouse":"<your_warehouse>",
+            "database":"<your_database>",
+            "region":"<your_region>",
+            "role":"<your_role>",
+            "authenticator":"snowflake",
+            "session_parameters":null,
+            "application":"AIRFLOW"
+        }
+    }'
+AIRFLOW_CONN_AWS_DE_TEAM='{
+    "conn_type": "aws",
+    "login": "<your_access_key>",
+    "password": "<your_secret_key>",
+}'
+
+AIRFLOW__CORE__XCOM_BACKEND="airflow.providers.common.io.xcom.backend.XComObjectStoreBackend"
+AIRFLOW__COMMON_IO__XCOM_OBJECTSTORAGE_PATH="s3://aws_de_team@ce-2-8-examples-bucket/xcom/"
