--- a/.env_example
+++ b/.env_example
@@ -33,3 +33,4 @@ AIRFLOW_CONN_AWS_DE_TEAM='{
 
 AIRFLOW__CORE__XCOM_BACKEND="airflow.providers.common.io.xcom.backend.XComObjectStoreBackend"
 AIRFLOW__COMMON_IO__XCOM_OBJECTSTORAGE_PATH="s3://aws_de_team@ce-2-8-examples-bucket/xcom/"
+AIRFLOW__COMMON_IO__XCOM_OBJECTSTORAGE_THRESHOLD=0
