add xcom compression

--- a/.env_example
+++ b/.env_example
@@ -32,5 +32,6 @@ AIRFLOW_CONN_AWS_DE_TEAM='{
 }'
 
 AIRFLOW__CORE__XCOM_BACKEND="airflow.providers.common.io.xcom.backend.XComObjectStoreBackend"
-AIRFLOW__COMMON_IO__XCOM_OBJECTSTORAGE_PATH="s3://aws_de_team@ce-2-8-examples-bucket/xcom/"
-AIRFLOW__COMMON_IO__XCOM_OBJECTSTORAGE_THRESHOLD=0
+AIRFLOW__COMMON_IO__XCOM_OBJECTSTORE_PATH="s3://aws_de_team@ce-2-8-examples-bucket/xcom/"
+AIRFLOW__COMMON_IO__XCOM_OBJECTSTORE_THRESHOLD="1000" # XCom 1KB or higher will be stored in the object store
+AIRFLOW__COMMON_IO__XCOM_OBJECTSTORE_COMPRESSION="zip"
