--- a/.env_example
+++ b/.env_example
@@ -31,7 +31,10 @@ AIRFLOW_CONN_AWS_DE_TEAM='{
     "password": "<your_secret_key>",
 }'
 
-AIRFLOW__CORE__XCOM_BACKEND="airflow.providers.common.io.xcom.backend.XComObjectStoreBackend"
-AIRFLOW__COMMON_IO__XCOM_OBJECTSTORE_PATH="s3://aws_de_team@ce-2-8-examples-bucket/xcom/"
-AIRFLOW__COMMON_IO__XCOM_OBJECTSTORE_THRESHOLD="1000" # XCom 1KB or higher will be stored in the object store
-AIRFLOW__COMMON_IO__XCOM_OBJECTSTORE_COMPRESSION="zip"
+# AIRFLOW__CORE__XCOM_BACKEND="airflow.providers.common.io.xcom.backend.XComObjectStoreBackend"
+# Select one of the 3 below
+# AIRFLOW__COMMON_IO__XCOM_OBJECTSTORE_PATH="s3://<your-aws-conn-id>@<your-bucket-name>/xcom/"
+# AIRFLOW__COMMON_IO__XCOM_OBJECTSTORE_PATH="gs://<your-gcp-conn-id>@<your-bucket-name>/xcom"
+# AIRFLOW__COMMON_IO__XCOM_OBJECTSTORE_PATH="abfs://<your-azure-conn-id>@<your-storage-account-name>/<your-bucket-name>/xcom"
+# AIRFLOW__COMMON_IO__XCOM_OBJECTSTORE_THRESHOLD="1000" # XCom 1KB or higher will be stored in the object store
+# AIRFLOW__COMMON_IO__XCOM_OBJECTSTORE_COMPRESSION="zip"
