--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 # Astro Runtime includes the following pre-installed providers packages: https://docs.astronomer.io/astro/runtime-image-architecture#provider-packages
 apache-airflow-providers-amazon[s3fs]==8.19.0
+apache-airflow-providers-google==10.16.0
+apache-airflow-providers-microsoft-azure==9.0.1
 apache-airflow-providers-common-io==1.3.0
 apache-airflow-providers-slack==8.6.1
 apache-airflow-providers-snowflake==5.3.0
