--- a/.env_example
+++ b/.env_example
@@ -32,9 +32,9 @@ AIRFLOW_CONN_AWS_DE_TEAM='{
 }'
 
 # AIRFLOW__CORE__XCOM_BACKEND="airflow.providers.common.io.xcom.backend.XComObjectStoreBackend"
-# Select one of the 3 below
+# Select one of the 3 options below and provide your values
 # AIRFLOW__COMMON_IO__XCOM_OBJECTSTORAGE_PATH="s3://<your-aws-conn-id>@<your-bucket-name>/xcom/"
 # AIRFLOW__COMMON_IO__XCOM_OBJECTSTORAGE_PATH="gs://<your-gcp-conn-id>@<your-bucket-name>/xcom"
 # AIRFLOW__COMMON_IO__XCOM_OBJECTSTORAGE_PATH="abfs://<your-azure-conn-id>@<your-storage-account-name>/<your-bucket-name>/xcom"
-# AIRFLOW__COMMON_IO__XCOM_OBJECTSTORAGE_THRESHOLD="200" # XCom 200B or higher will be stored in the object store
+# AIRFLOW__COMMON_IO__XCOM_OBJECTSTORAGE_THRESHOLD="3000" # XCom 3KB or higher will be stored in the object store
 # AIRFLOW__COMMON_IO__XCOM_OBJECTSTORAGE_COMPRESSION="zip"
