--- a/.env_example
+++ b/.env_example
@@ -31,7 +31,7 @@ AIRFLOW_CONN_AWS_DE_TEAM='{
     "password": "<your_secret_key>",
 }'
 
-# AIRFLOW__CORE__XCOM_BACKEND="airflow.providers.common.io.xcom.backend.XComObjectStoreBackend"
+# AIRFLOW__CORE__XCOM_BACKEND="airflow.providers.common.io.xcom.backend.XComObjectStorageBackend"
 # Select one of the 3 options below and provide your values
 # AIRFLOW__COMMON_IO__XCOM_OBJECTSTORAGE_PATH="s3://<your-aws-conn-id>@<your-bucket-name>/xcom/"
 # AIRFLOW__COMMON_IO__XCOM_OBJECTSTORAGE_PATH="gs://<your-gcp-conn-id>@<your-bucket-name>/xcom"
