--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ airflow.db
 include/.DS_Store
 dags/learn_updates
 include/key.json
+include/apache_airflow_providers_common_io-1.3.1-py3-none-any.whl
