common io 1.4.0 from whl

--- a/.env_example
+++ b/.env_example
@@ -25,16 +25,22 @@ AIRFLOW_CONN_SNOWFLAKE_DE_TEAM='{
             "application":"AIRFLOW"
         }
     }'
+    
 AIRFLOW_CONN_AWS_DE_TEAM='{
     "conn_type": "aws",
     "login": "<your_access_key>",
     "password": "<your_secret_key>",
 }'
 
-# AIRFLOW__CORE__XCOM_BACKEND="airflow.providers.common.io.xcom.backend.XComObjectStorageBackend"
+
+# Object Storage XCom Backend
+
+AIRFLOW__CORE__XCOM_BACKEND="airflow.providers.common.io.xcom.backend.XComObjectStorageBackend"
+
 # Select one of the 3 options below and provide your values
-# AIRFLOW__COMMON_IO__XCOM_OBJECTSTORAGE_PATH="s3://<your-aws-conn-id>@<your-bucket-name>/xcom/"
+AIRFLOW__COMMON_IO__XCOM_OBJECTSTORAGE_PATH="s3://<your-aws-conn-id>@<your-bucket-name>/xcom/"
 # AIRFLOW__COMMON_IO__XCOM_OBJECTSTORAGE_PATH="gs://<your-gcp-conn-id>@<your-bucket-name>/xcom"
 # AIRFLOW__COMMON_IO__XCOM_OBJECTSTORAGE_PATH="abfs://<your-azure-conn-id>@<your-storage-account-name>/<your-bucket-name>/xcom"
-# AIRFLOW__COMMON_IO__XCOM_OBJECTSTORAGE_THRESHOLD="3000" # XCom 3KB or higher will be stored in the object store
-# AIRFLOW__COMMON_IO__XCOM_OBJECTSTORAGE_COMPRESSION="zip"
+
+AIRFLOW__COMMON_IO__XCOM_OBJECTSTORAGE_THRESHOLD="1000" # XCom 1KB or higher will be stored in the object store
+AIRFLOW__COMMON_IO__XCOM_OBJECTSTORAGE_COMPRESSION="zip"
