--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@
 apache-airflow-providers-amazon[s3fs]==8.19.0
 apache-airflow-providers-google==10.16.0
 apache-airflow-providers-microsoft-azure==9.0.1
-apache-airflow-providers-common-io==1.3.0
+# apache-airflow-providers-common-io==1.3.0
+/tmp/apache_airflow_providers_common_io-1.4.0-py3-none-any.whl
 apache-airflow-providers-slack==8.6.1
 apache-airflow-providers-snowflake==5.3.0
 --extra-index-url https://download.pytorch.org/whl/cpu
