--- a/.env_example
+++ b/.env_example
@@ -43,4 +43,4 @@ AIRFLOW__COMMON_IO__XCOM_OBJECTSTORAGE_PATH="s3://<your-aws-conn-id>@<your-bucke
 # AIRFLOW__COMMON_IO__XCOM_OBJECTSTORAGE_PATH="abfs://<your-azure-conn-id>@<your-storage-account-name>/<your-bucket-name>/xcom"
 
 AIRFLOW__COMMON_IO__XCOM_OBJECTSTORAGE_THRESHOLD="1000" # XCom 1KB or higher will be stored in the object store
-AIRFLOW__COMMON_IO__XCOM_OBJECTSTORAGE_COMPRESSION="zip"
+AIRFLOW__COMMON_IO__XCOM_OBJECTSTORAGE_COMPRESSION="zip"  # optional
